--- a/assets/scss/_intro.scss
+++ b/assets/scss/_intro.scss
@@ -1,8 +1,10 @@
 section#landing {
-  min-height: 100vh;
+  $title-height: calc(100vh * 0.2);
+  // min-height: 100vh;
   position: relative;
   transition: 0.5s;
   z-index: -1;
+  margin-bottom: $title-height;
 
   &.scrolled {
     transition: 0.5s;
@@ -15,24 +17,23 @@ section#landing {
 
   &::before {
     content: 'Welcome';
-    position: fixed;
+    position: absolute;
     width: 100%;
-    bottom: 0;
-    display: flex;
-    justify-content: start;
+    left: 0;
+    top: 100%;
     font-family: $font-mono;
-    font-size: 160px;
+    font-size: $title-height;
     font-weight: bolder;
     line-height: 120px;
     letter-spacing: -20px;
     opacity: 0.4;
     overflow: hidden;
 
+    background: linear-gradient(45deg, $white 20%, darken($grey, 40%) 30%);
+    background: -webkit-linear-gradient(45deg, $white 10%, rgb(71, 71, 71) 20%);
     background-clip: text !important;
     -webkit-background-clip: text !important;
     -webkit-text-fill-color: transparent;
-    background: linear-gradient(45deg, $white 20%, darken($grey, 40%) 30%);
-    background: -webkit-linear-gradient(45deg, $white 10%, rgb(71, 71, 71) 20%);
   }
 
   .col:first-child {
@@ -56,10 +57,6 @@ section#landing {
 
       @include breakpoint-and-up('lg') {
         font-size: 6em;
-      }
-
-      @include breakpoint-and-up('xl') {
-        font-size: 7em;
       }
     }
   }
