--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -19,7 +19,7 @@ $color-map: (
 $font-primary: -apple-system, 'BlinkMacSystemFont', 'Segoe UI', Helvetica, Arial, sans-serif,
   'Apple Color Emoji', 'Segoe UI Emoji';
 $font-secondary: sans-serif;
-$font-mono: monospace;
+$font-mono: 'JetBrains Mono', monospace;
 
 $font-families: (
   'primary': $font-primary,
